<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrimeSearchActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/crime_search_title_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_crimes"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignTop="@id/crime_search_title_layout"
        android:layout_alignBottom="@id/crime_search_submit_layout"
        android:layout_marginBottom="15dp"
        android:id="@+id/crime_search_center_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_location"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/crime_search_location_known"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <EditText
                    android:id="@+id/search_latitude_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/medium_gray"
                    android:hint="@string/sample_latitude"
                    android:inputType="numberDecimal|numberSigned"
                    android:textColor="@color/white"
                    android:textColorHint="@color/medium_dark_gray"
                    android:textColorLink="@color/medium_gray"
                    android:textSize="22sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <EditText
                    android:id="@+id/search_longitude_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/medium_gray"
                    android:hint="@string/sample_longitude"
                    android:inputType="numberDecimal|numberSigned"
                    android:textColor="@color/white"
                    android:textColorHint="@color/medium_dark_gray"
                    android:textColorLink="@color/medium_gray"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/crime_search_location_unknown"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/force"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_force_main"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:hint="@string/london"
                    android:textColorHint="@color/medium_dark_gray"
                    android:backgroundTint="@color/medium_dark_gray"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crime_search_location_check"
            android:text="@string/location_known"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:backgroundTint="@color/white"
            android:buttonTint="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:checked="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_month"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/spinner">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="150dp"
                    android:spinnerMode="dropdown"
                    android:id="@+id/month_spinner"
                    android:popupBackground="@color/medium_gray"
                    android:theme="@style/SpinnerStyle">

                </Spinner>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/spinner">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="100dp"
                    android:spinnerMode="dropdown"
                    android:id="@+id/year_spinner"
                    android:popupBackground="@color/medium_gray"
                    android:theme="@style/SpinnerStyle"
                    >

                </Spinner>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:id="@+id/crime_search_submit_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crime_search_submit"
            android:layout_marginTop="20dp"
            android:background="@drawable/capsule_button_dark"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="23sp" />

    </LinearLayout>

</RelativeLayout>


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:layout_marginStart="10dp"-->
    <!--android:layout_marginEnd="10dp"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:layout_marginBottom="10dp">-->

    <!--<Button-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/search_by_date"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/search_by_month"-->
    <!--android:textSize="20sp"-->
    <!--android:textColor="@color/white"-->
    <!--android:textAllCaps="false"-->
    <!--android:background="@drawable/capsule_button"-->
    <!--android:layout_marginRight="5dp"-->
    <!--android:layout_marginEnd="5dp"/>-->

    <!--<Button-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/search_by_location"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/search_by_location"-->
    <!--android:textSize="20sp"-->
    <!--android:textColor="@color/white"-->
    <!--android:textAllCaps="false"-->
    <!--android:background="@drawable/capsule_button"-->
    <!--android:layout_marginLeft="5dp"-->
    <!--android:layout_marginStart="5dp"/>-->

    <!--</LinearLayout>-->

    <!--<FrameLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/crime_search_fragment"-->
    <!--/>-->